fix: eslint rules

--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@heroui/react": "^2.7.5",
     "@heroui/system": "^2.4.12",
     "@heroui/theme": "^2.4.12",
+    "@next/eslint-plugin-next": "^15.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
+    "eslint-plugin-import": "^2.31.0",
     "framer-motion": "^12.5.0",
     "jose": "^6.0.10",
     "lucide-react": "^0.483.0",
@@ -30,7 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.2.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
