--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@heroui/react": "^2.7.5",
     "@heroui/system": "^2.4.12",
     "@heroui/theme": "^2.4.12",
+    "@hookform/resolvers": "^4.1.3",
     "@next/eslint-plugin-next": "^15.2.3",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "eslint-plugin-import": "^2.31.0",
     "framer-motion": "^12.5.0",
     "jose": "^6.0.10",
@@ -26,8 +28,10 @@
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -45,4 +49,3 @@
     "typescript": "^5"
   }
 }
-
