--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && eslint src --ext .js,.jsx,.ts,.tsx --cache",
-    "lint:fix": "next lint --fix && eslint src --ext .js,.jsx,.ts,.tsx --fix --cache"
+    "lint": "next lint && eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "next lint --fix && eslint src --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
     "@heroui/react": "^2.7.5",
