--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "^8.27.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
+    "contentful": "^11.5.16",
     "date-fns": "^4.1.0",
     "eslint-plugin-import": "^2.31.0",
     "framer-motion": "^12.5.0",
@@ -29,6 +30,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
