--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,17 +13,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",  // ✅ Add this
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "typeRoots": ["./types", "./node_modules/@types"]  // ✅ Ensure this exists
+    }
   },
-  "include": [
-    "next-env.d.ts",  // ✅ Always include this
-    "types",          // ✅ Not just *.ts inside it
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
+  "include": ["src/types/*.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
