--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/types/*.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+ // "include": ["src/types/*.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts","src","src/types", ".next/types/**/*.ts"
+],
+
   "exclude": ["node_modules"]
 }
