--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,18 +13,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "plugins": [{ "name": "next" }],
     "paths": {
       "@/*": ["./src/*"]
     }
   },
- // "include": ["src/types/*.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "include": ["next-env.d.ts","src","src/types", ".next/types/**/*.ts"
-],
-
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", ".next"]
 }
